--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@ color: #a7a7a7;  border-radius: 6px 6px 0 0;background-image: url('https://i.ibb
                         src="https://i.ibb.co/qDxxQG4/yuvrajsir.jpg" alt="Image 3" style="            border-radius: 50%;
                         stroke: #fff;
                         width: 70%;">
-                    <p  style="line-height: 125%;"">Yuvraj Kumar</p>
+                    <p  style="line-height: 125%; font-size: 14px;"">Yuvraj Kumar</p>
                     <p
                     style="font-size: 14px; font-weight: 400; color: black;align-items: center; text-align: center;line-height: 125%; ">
                         Android/iOS Head</p>
@@ -164,7 +164,7 @@ color: #a7a7a7;  border-radius: 6px 6px 0 0;background-image: url('https://i.ibb
                     width: 70%;
                     height: fit-content;" class="rounded-image2 rounded-image22"
                         src="https://i.ibb.co/KyqTN0P/yashsir.jpg" alt="Image 1">
-                    <p style= "line-height: 125%;">Yash Goyal</p>
+                    <p style= "line-height: 125%; font-size: 14px;">Yash Goyal</p>
                     <p
                     style="font-size: 14px; font-weight: 400; color: black;align-items: center; text-align: center;line-height: 125%; ">
                         Blockchain Head</p>
@@ -182,7 +182,7 @@ color: #a7a7a7;  border-radius: 6px 6px 0 0;background-image: url('https://i.ibb
                 <img class="rounded-image2" src="https://i.ibb.co/4Mj7BJ5/riyamamnew.jpg" alt="Image 2" style="            border-radius: 50%;
                 stroke: #fff;
                 width: 70%;">
-                <p style="line-height: 125%;">Riya Jain</p>
+                <p style="line-height: 125%; font-size: 14px;">Riya Jain</p>
                 <p 
                 style="font-size: 14px; font-weight: 400; color: black;align-items: center; text-align: center;line-height: 125%; ">
                     Open Source Head</p>
@@ -191,7 +191,7 @@ color: #a7a7a7;  border-radius: 6px 6px 0 0;background-image: url('https://i.ibb
                 <img class="rounded-image2" src="https://i.ibb.co/s22fpqB/spandansirR.jpg" alt="Image 1" style="            border-radius: 50%;
                 stroke: #fff;
                 width: 70%;">
-                <p style="line-height: 125%;">Spandan Barve</p>
+                <p style="line-height: 125%; font-size: 14px;">Spandan Barve</p>
                 <p
                 style="font-size: 14px; font-weight: 400; color: black;align-items: center; text-align: center;line-height: 125%; ">
                     Cloud Head</p>
@@ -209,7 +209,7 @@ color: #a7a7a7;  border-radius: 6px 6px 0 0;background-image: url('https://i.ibb
             <img class="rounded-image2" src="https://i.ibb.co/P1Pp6Y2/harshithsir.jpg" alt="Image 3" style="            border-radius: 50%;
             stroke: #fff;
             width: 70%;">
-            <p style="line-height: 125%;" >Harshith Mente</p>
+            <p style="line-height: 125%; font-size: 14px;" >Harshith Mente</p>
             <p
             style="font-size: 14px; font-weight: 400; color: black;align-items: center; text-align: center;line-height: 125%; ">
                 Technical Head</p>
@@ -218,7 +218,7 @@ color: #a7a7a7;  border-radius: 6px 6px 0 0;background-image: url('https://i.ibb
             <img class="rounded-image2" src="https://i.ibb.co/Mfvx4v5/tanmaysir.jpg" alt="Image 3" style="            border-radius: 50%;
             stroke: #fff;
             width: 70%;">
-            <p style="line-height: 125%;">Tanmay Maheshwari</p>
+            <p style="line-height: 125%; font-size: 14px;">Tanmay Maheshwari</p>
             <p
             style="font-size: 14px; font-weight: 400; color: black;align-items: center; text-align: center;line-height: 125%; ">
                 UI/UX Head</p>
@@ -236,7 +236,7 @@ color: #a7a7a7;  border-radius: 6px 6px 0 0;background-image: url('https://i.ibb
                 <img class="rounded-image2" src="https://i.ibb.co/mzwnQnj/waveR.jpg" alt="Image 1" style="            border-radius: 50%;
                 stroke: #fff;
                 width: 70%;">
-                <p style= "line-height: 125%;">Vaivaswat Dubey</p>
+                <p style= "line-height: 125%; font-size: 14px;">Vaivaswat Dubey</p>
                 <p
                 style="font-size: 14px; font-weight: 400; color: black;align-items: center; text-align: center;line-height: 125%; ">
                     Event Head</p>
@@ -246,7 +246,7 @@ color: #a7a7a7;  border-radius: 6px 6px 0 0;background-image: url('https://i.ibb
                 <img class="rounded-image2" src="https://i.ibb.co/hsX0bD4/joydeepr.jpg" alt="Image 2" style="            border-radius: 50%;
                 stroke: #fff;
                 width: 70%;">
-                <p style= "line-height: 125%;">Joydeep Tripathy</p>
+                <p style= "line-height: 125%; font-size: 14px;">Joydeep Tripathy</p>
                 <p
                 style="font-size: 14px; font-weight: 400; color: black;align-items: center; text-align: center;line-height: 125%; ">
                     Event Head</p>
@@ -263,7 +263,7 @@ color: #a7a7a7;  border-radius: 6px 6px 0 0;background-image: url('https://i.ibb
                 <img class="rounded-image2" src="https://i.ibb.co/7RRL0yy/abhinav.jpg" alt="Image 3" style="            border-radius: 50%;
                 stroke: #fff;
                 width: 70%;">
-                <p style= "line-height: 125%;">Abhinav Sharma</p>
+                <p style= "line-height: 125%; font-size: 14px;">Abhinav Sharma</p>
                 <p
                 style="font-size: 14px; font-weight: 400; color: black;align-items: center; text-align: center;line-height: 125%; ">
                     Public Relations Head</p>
@@ -273,7 +273,7 @@ color: #a7a7a7;  border-radius: 6px 6px 0 0;background-image: url('https://i.ibb
                 <img class="rounded-image2" src="https://i.ibb.co/44tp5VG/Screenshot-2023-10-18-224413.jpg" alt="Image 3" style="            border-radius: 50%;
                 stroke: #fff;
                 width: 70%;">
-                <p style= "line-height: 125%;">Krishi Agarwal</p>
+                <p style= "line-height: 125%; font-size: 14px;">Krishi Agarwal</p>
                 <p
                 style="font-size: 14px; font-weight: 400; color: black;align-items: center; text-align: center;line-height: 125%; ">
                     Public Relations Head</p>
@@ -289,7 +289,7 @@ color: #a7a7a7;  border-radius: 6px 6px 0 0;background-image: url('https://i.ibb
                 <img class="rounded-image2" src="https://i.ibb.co/b278JV8/aditya.jpg" alt="Image 1" style="            border-radius: 50%;
                 stroke: #fff;
                 width: 70%;">
-                <p style= "line-height: 125%;">Aditya Kumar Singh</p>
+                <p style= "line-height: 125%; font-size: 14px;">Aditya Kumar Singh</p>
                 <p
                 style="font-size: 14px; font-weight: 400; color: black;align-items: center; text-align: center;line-height: 125%; ">
                     Design Head</p>
@@ -299,7 +299,7 @@ color: #a7a7a7;  border-radius: 6px 6px 0 0;background-image: url('https://i.ibb
                 <img class="rounded-image2" src="https://i.ibb.co/nQQpygq/abhiram.jpg" alt="Image 2" style="            border-radius: 50%;
                 stroke: #fff;
                 width: 70%;">
-                <p style= "line-height: 125%;">Abhiram Reddy</p>
+                <p style= "line-height: 125%; font-size: 14px;">Abhiram Reddy</p>
                 <p
                 style="font-size: 14px; font-weight: 400; color: black;align-items: center; text-align: center;line-height: 125%; ">
                     Design Head</p>
@@ -315,7 +315,7 @@ color: #a7a7a7;  border-radius: 6px 6px 0 0;background-image: url('https://i.ibb
                 <img class="rounded-image2" src="https://i.ibb.co/vXnZRsZ/anshuman.jpg" alt="Image 3" style="            border-radius: 50%;
                 stroke: #fff;
                 width: 70%;">
-                <p style= "line-height: 125%;">Anshuman Burman</p>
+                <p style= "line-height: 125%; font-size: 14px;">Anshuman Burman</p>
                 <p
                 style="font-size: 14px; font-weight: 400; color: black;align-items: center; text-align: center;line-height: 125%; ">
                     Content Head</p>
@@ -324,7 +324,7 @@ color: #a7a7a7;  border-radius: 6px 6px 0 0;background-image: url('https://i.ibb
                 <img class="rounded-image2" src="https://i.ibb.co/ggCyv0h/siddhant.jpg" alt="Image 3" style="            border-radius: 50%;
                 stroke: #fff;
                 width: 70%;">
-                <p style= "line-height: 125%;" >Siddhant Baiswar</p>
+                <p style= "line-height: 125%; font-size: 14px;" >Siddhant Baiswar</p>
                 <p
                 style="font-size: 14px; font-weight: 400; color: black;align-items: center; text-align: center;line-height: 125%; ">
                     Content Head</p>
